RESOLVED FIXED268228
[UnifiedPDF] scrolling is broken after navigating back to a PDF
https://bugs.webkit.org/show_bug.cgi?id=268228
Summary [UnifiedPDF] scrolling is broken after navigating back to a PDF
Simon Fraser (smfr)
Reported 2024-01-27 11:46:41 PST
Scrolling is broken after navigating back to a PDF
Attachments
Simon Fraser (smfr)
Comment 1 2024-01-27 11:46:54 PST
Simon Fraser (smfr)
Comment 2 2024-01-27 11:51:10 PST
EWS
Comment 3 2024-01-29 21:49:54 PST
Committed 273727@main (e6168698e8a3): <https://commits.webkit.org/273727@main> Reviewed commits have been landed. Closing PR #23359 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.